--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,8 @@ langchain-openai
 langchain-core
 langchain-community
 langchain-postgres
+langchain-cohere
+cohere<5.15  # Pin for langchain-cohere compatibility
 langgraph
 
 # Notion and Vector dependencies
@@ -25,6 +27,9 @@ notion-client
 pgvector
 numpy
 tiktoken
+
+# Web search dependencies
+tavily-python
 
 # Production dependencies
 slowapi
